# audio_files_manager

./: .gitignore  AUDIO_DEVICE_GUIDE.md  LICENSE  MESSAGE_TYPE_API_GUIDE.md  PLAY_AUDIO_ENHANCEMENT.md  README.md  TEST_SUMMARY.md  audio_file_manager_extension.py  bitbucket-pipelines.yaml  enhanced_record_example.py  example_enhanced_manager.py  legacy_integration_example.py  legacy_manager.py  legacy_paging_server.py  legacy_recorded_messages_service.py  play_audio_example.py  pyproject.toml  record_example.py  refactored_legacy_paging_server.py  requirements-dev.txt  run_all_tests.py  setup.py  tmp_rovodev_test_failures.py
.github/workflows/: python-tests.yaml
.trunk/: trunk.yaml
audio_file_manager/: __init__.py  backends.py  config.py  exceptions.py  file_system_manager.py  legacy_compatibility.py  legacy_compatibility_simple.py  legacy_service.py  manager.py  metadata_manager.py
tests/: test_backends.py  test_comprehensive.py  test_device_separation.py  test_enhanced_examples.py  test_enhanced_manager.py  test_legacy_integration.py  test_legacy_service.py  test_manager.py  test_metadata_manager.py  test_metadata_only.py  test_play_audio_with_button_id.py
